moved packages to internal dir, added services, modified config

--- a/internal/configuration/configuration.yml
+++ b/internal/configuration/configuration.yml
@@ -10,7 +10,7 @@ database:
   port:     5432
   user:     postgres
   password: secret
-  name:     xmex
+  name:     postgres
 
 redis:
   host:     localhost
